# bit

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .todo2  BUILD.bit  Bitfile  Cargo.toml  Dockerfile  Justfile  README.md  SPEC.md  api.go  bit.go  build.ninja  driver.go  go.mod  go.sum  install.sh  lefthook.yml
.github/workflows/: ci.yml  lint-pr.yml  release.yml
_examples/c/: .gitignore  Bitfile  a.c  b.c  b.h
bit-derive/: Cargo.toml
bit-derive/src/: lib.rs
cmd/bit/: main.go
engine/: colours.go  database.go  engine.go  hasher.go  logger.go
engine/csi/: csi.go  csi_test.go
engine/glob/: gitignore.go  glob.go
engine/internal/: gitignore.go  glob.go  memoise.go
engine/internal/eventsource/: eventsource.go
engine/internal/pubsub/: pubsub.go
engine/logging/: colours.go  logger.go
example/: .dockerignore  .gitignore  BUILD.bit  README.md  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
example/bff/: package.json  tsconfig.json
example/bff/src/: app.ts  (+2 more)
example/docker/: backend.Dockerfile  bff.Dockerfile
example/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
golang/: cmd.go  common.go  enum_enumer.go  generate.go
golang/_example/: build.ninja  enum_enumer.go  main.go
integrations/tree-sitter/: .gitignore  README.md  grammar.js  package.json  tree-sitter.json
integrations/zed/: extension.toml
parser/: lexer.go  override_enumer.go  override_string.go  parser.go  parser_test.go  text.go  text_test.go  visit.go
parser/testdata/: Bitfile.full
scripts/: bit
src/: ast.rs  ctrf.rs  dag.rs  engine.rs  expr.rs  file_tracker.rs  graph.rs  import.rs  jq.rs  lib.rs  loader.rs  main.rs  matrix.rs  module.rs  output.rs  parser.rs  provider.rs  schema.rs  sha256.rs  state.rs  value.rs
src/providers/: exec.rs  mod.rs
tests/: integration.rs
(+59 files in other folders)
