[package]
name = "bit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
glob = "0.3.3"
jaq-core = "3.0.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = { version = "3.0.0", default-features = false }
parse-dockerfile = { version = "0.1.5", default-features = false }
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
winnow = "1.0.0"
yansi = "1.0.1"

[dev-dependencies]
tempfile = "3.27.0"
